# jax-fem

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  SC_requirements.txt  environment.yml  mkdocs.yml  pyproject.toml
docs/: index.md
docs/api/: api_overview.md  main_functionality.md  mesh_generation.md  post_processing.md
docs/tutorials/: cardiax_code_overview.md
docs/tutorials/Introductory/: neohookean.md  poisson.md
src/cardiax/: README.md  __init__.py  _basis.py  _fe.py  _internal.py  _problem.py  _solver.py  common.py  operators.py  utils.py
src/cardiax/Lagrange/: fe.py  generate_mesh.py  post_process.py
src/cardiax/solvers/: debug_solver.py  gradient_descent.py  newton.py
test/benchmarks/: __main__.py
test/benchmarks/hyperelastic_PS/: test_hyperelastic_PS.py
test/benchmarks/hyperelastic_SS/: test_hyperelastic_SS.py
test/benchmarks/inverse/: test_inverse.py
test/benchmarks/linear_poisson/: test_linear_poisson.py
test/benchmarks/nodal_stress/: test_nodal_stress.py
test/unittests/: README.md  test_kernel_architecture.py  test_preconditioner.py
tutorials/Cardiac_Modeling/LDRBM/: LDRBM.py
tutorials/Cardiac_Modeling/Monodomain/: example.py  monodomain.py
tutorials/Cardiac_Modeling/Myocardium/: example.py
tutorials/Introductory/neohookean/: example.py
tutorials/Introductory/poisson/: example.py
